feat: adding new tests, AuthRepository, and doing some refactoring
